--- a/views/pages/createinvoice.ejs
+++ b/views/pages/createinvoice.ejs
@@ -171,17 +171,17 @@
         <table>
             <tr>
                 <td>Invoice Number:</td>
-                <td><input></input></td>
+                <td name="invnum"><input></input></td>
             </tr>
 
             <tr>
                 <td>Invoice Data: </td>
-                <td><input></input></td>
+                <td name="invdata"><input></input></td>
             </tr>
 
             <tr>
                 <td> Payment Deadline: </td>
-                <td><input></input></td>
+                <td name = "paymentdeadline"><input></input></td>
             </tr>
         </table>
 
@@ -193,10 +193,10 @@
         <table>
             <tr>
                 <td>Select Client</td>
-                <td><input type="checkbox"></td>
+                <td name="selclient"><input type="checkbox"></td>
 
                 <td>New Client</td>
-                <td><input type="checkbox"></td>
+                <td name ="newclient"><input type="checkbox"></td>
             </tr>
         </table>
 
@@ -206,17 +206,17 @@
             </tr>
             <tr>
                 <td>Contact Name:</td>
-                <td><input type="textbox"></td>
+                <td name = "contname"><input type="textbox"></td>
             </tr>
 
             <tr>
                 <td>Email Address:</td>
-                <td><input type="textbox"></td>
+                <td name ="emailadd"><input type="textbox"></td>
             </tr>
 
             <tr>
                 <td>Phone Number:</td>
-                <td><input type="textbox"></td>
+                <td name ="phonenum"><input type="textbox"></td>
             </tr>
         </table>
     </fieldset>
