--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -273,25 +273,6 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <!-- <tr>
-                                <th scope="row">1</th>
-                                <td>Mark</td>
-                                <td>Otto</td>
-                                <td>@mdo</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">2</th>
-                                <td>Jacob</td>
-                                <td>Thornton</td>
-                                <td>@fat</td>
-                            </tr>
-                            <tr>
-                                <th scope="row">3</th>
-                                <td>Larry</td>
-                                <td>the Bird</td>
-                                <td>@twitter</td>
-                            </tr> -->
-
                             <% rows.forEach(function(r) { %>
 
                                 <tr>
@@ -301,8 +282,16 @@
                                     <td>
                                         <%= r.clientname %>
                                     </td>
-                                    <td>&nbsp</td>
-                                    <td>0</td>
+                                    <td>
+                                        <%= r.pendingInvoices %>
+                                    </td>
+                                    <td>
+                                        <% if (r.remBalance == NULL) { %>
+                                            1
+                                        <% } else { %>
+                                            <%= r.remBalance %>
+                                        <% } %>
+                                    </td>
                                     <td>
                                         <%= r.contactname %>
                                     </td>
@@ -311,11 +300,10 @@
                                     </td>
                                     <td>
                                         <% if (r.phone) { %>
-                                            + <%= r.cntrycode %>
-                                                <%= r.phone %>
-                                                    <% } else { %>
-                                                        <%= r.phone %>
-                                                            <% } %>
+                                            + <%= r.cntrycode %> <%= r.phone %>
+                                        <% } else { %>
+                                            <%= r.phone %>
+                                        <% } %>
                                     </td>
                                     <td>
 
