--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -286,10 +286,10 @@
                                         <%= r.pendingInvoices %>
                                     </td>
                                     <td>
-                                        <% if (r.remBalance == NULL) { %>
-                                            1
-                                        <% } else { %>
+                                        <% if (r.remBalance || r.remBalance >= 0) { %>
                                             <%= r.remBalance %>
+                                        <% } else { %>
+                                            1
                                         <% } %>
                                     </td>
                                     <td>
