Modified the client page query to include new column items pendingInvoices and remaining balance; fixed bug

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -286,7 +286,7 @@
                                         <%= r.pendingInvoices %>
                                     </td>
                                     <td>
-                                        <% if (r.remBalance || r.remBalance >= 0) { %>
+                                        <% if (r.remBalance >= 0) { %>
                                             <%= r.remBalance %>
                                         <% } else { %>
                                             1
