Modified the client page query to include new column items pendingInvoices and remaining balance; if statement in client.ejs not working

--- a/views/pages/client.ejs
+++ b/views/pages/client.ejs
@@ -286,11 +286,12 @@
                                         <%= r.pendingInvoices %>
                                     </td>
                                     <td>
-                                        <% if (r.remBalance >= 0) { %>
-                                            <%= r.remBalance %>
+                                        <!-- <% if (r.rembalance >= 0) { %>
+                                            <%= r.rembalance %>
                                         <% } else { %>
                                             1
-                                        <% } %>
+                                        <% } %> -->
+                                        <%= r.rembalance %>
                                     </td>
                                     <td>
                                         <%= r.contactname %>
