added newProduct page with endpoints

--- a/views/pages/productspage.ejs
+++ b/views/pages/productspage.ejs
@@ -243,12 +243,12 @@
                                         <%= r.totalquantity %>
                                     </td>
                                     <td>
-                                        <a href="/viewproduct/<%= r.productid%>" class="btn btn-secondary">
+                                        <a href="/viewProductInfo/<%= r.productid%>" class="btn btn-secondary">
                                             View Product Info
                                         </a>
                                     </td>
                                     <td>
-                                        <a href="/editproduct/<%= r.productid%>" class="btn btn-secondary">
+                                        <a href="/editProductInfo/<%= r.productid%>" class="btn btn-secondary">
                                             Edit Product Info
                                         </a>
                                     </td>
