Made changes to new and view Product sections to show the required criteria on the frontend. Also fixed typo on newClient

--- a/views/pages/newClient.ejs
+++ b/views/pages/newClient.ejs
@@ -186,7 +186,7 @@
 
 
 
-            <!-- Main contecnt section, will be different for all the pages -->
+            <!-- Main content section, will be different for all the pages -->
             <div class="col-sm-10 col-sm-offset-2 col-md-10 col-md-offset-2 main" style="min-width: 1000px;">
                 <h1 class="display-1">New Clients</h1>
 
