--- a/views/pages/viewProductInfo.ejs
+++ b/views/pages/viewProductInfo.ejs
@@ -217,7 +217,7 @@
                                     <br>
                                     <label for="inputPrice" class="form-label">Price</label>
                                     <input type="number" class="form-control" id="inputPrice" name="prdctPrice" 
-                                    min=0 step=0.01 value=<%= r.price %> readonly="readonly">
+                                    min=0 step=0.01 readonly="readonly" value=<%= r.price %>>
                                 </div>
 
                                 <div class="col-md-6">
