--- a/views/pages/viewProductInfo.ejs
+++ b/views/pages/viewProductInfo.ejs
@@ -214,10 +214,10 @@
                                     <label for="inputProductName" class="form-label">Product Name</label>
                                     <input type="text" class="form-control" id="inputProductName" name="prdctName"
                                     value="<%= r.productName %>" readonly="readonly">
-                                    <!-- <br>
+                                    <br>
                                     <label for="inputPrice" class="form-label">Price</label>
                                     <input type="number" class="form-control" id="inputPrice" name="prdctPrice" 
-                                    min=0 step=0.01 readonly="readonly" value=<%= r.price %>> -->
+                                    min=0 step=0.01 readonly="readonly" value=<%= r.price %>>
                                 </div>
 
                                 <div class="col-md-6">
